--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@
 org.gradle.daemon = true
 org.gradle.configureondemand = true
 org.gradle.jvmargs=-Xmx1536m -XX:MaxPermSize=384m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#TODO: Add API Key here
+GOOGLE_API_KEY=<API Key>
